# cs513_data_cleaning_project

./: .gitignore  README.md
dataset/: DataDescription.md  DataLinks.txt  DataUseCases.md
dataset/02_after_clustering/: history.json
dataset/combined_history/: OpenRefineHistory.gv  OpenRefineHistory.yw  combined_history.json
diagrams/: outer_workflow.drawio  python_inner_workflow.drawio
notebooks/: Backfill_Location_Info.ipynb  ChicagoFoodInspectionDashboard.twb  Chicago_Food_Inspection_EDA.ipynb
phase1-report/: CS513-Phase-1-report-draft.docx  checklist.md
phase2-report/: CS513-Phase-2-report-draft.docx
phase2-report/supplementary-materials/: DataLinks.txt  Queries.txt  queries.txt
python/: Analysis.ipynb  create_cleaned_tables.sh  create_db_tables.py  create_raw_tables.sh  export_cleaned_db.sh  export_db_flat_file.py  export_raw_db.sh  models.py  populate_models.py  pyproject.toml  run_populate_clean_data.sh  run_populate_raw_data.sh
sql/: food_inspections_db_create_indexes.sql  food_inspections_db_create_unique_indexes.sql  food_inspections_db_sqlite_ddl.sql  foodinspections_db_mysql_ddl.sql  foodinspections_db_mysql_ddl_2.sql  foodinspections_db_pg_ddl.sql  foodinspections_db_pg_ddl_2.sql
sql/ddl/: food_inspections_db_add_constraints.sql  food_inspections_db_create_indexes.sql  food_inspections_db_sqlite_ddl.sql  foodinspections_db_mysql_ddl.sql  foodinspections_db_mysql_ddl_2.sql  foodinspections_db_pg_ddl.sql
sql/orm/: food_inspections_db_mysql_ddl_pony.sql  food_inspections_db_pg_ddl_pony.sql  food_inspections_db_sqlite_pony.sql
(+5 files in other folders)
