[tool.poetry]
name = "data_cleaning_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.2"
ibis-framework = {extras = ["duckdb", "pandas", "polars", "sqlite"], version = "^5.1.0"}
click = "^8.1.3"
pony = "^0.7.16"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
